[gd_scene load_steps=3 format=3 uid="uid://ktr4lcc66sa4"]

[ext_resource type="Script" path="res://PauseMenu/pause_menu.gd" id="1_3kdnr"]
[ext_resource type="AudioStream" uid="uid://da4s37lc16eff" path="res://sounds tracks/analog-appliance-button-15-186961.mp3" id="2_dbycm"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3kdnr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitToMain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to main menu"

[node name="QuitGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dbycm")
volume_db = -20.0

[connection signal="button_down" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/QuitToMain" to="." method="_on_quit_to_main_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_button_down"]
